# ddojo

./: .env.example  .gitignore  .pdm-python  CHANGELOG.md  README.md  install.sh  pyproject.toml
challenges/: 2025-11-28_09-14-51_.md  2025-11-28_09-26-10_character_frequency_counter.md  2025-11-28_09-26-53_reliable_data_transfer_network.md  2025-11-28_09-27-37_simple_receipt_generator.md  2025-11-28_12-15-51_quantum_grid_navigation.md
src/ddojo/: ai_logic.py  display.py  files.py  main.py  testing.py
src/ddojo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
